--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Conceptual Store</title>
   </head>
   <body>
-    <h1>Conceptual</h1>
+    <h1>Conceptual Session</h1>
   </body>
 </html>
