--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     =======
     <h1>I am mir jakariya</h1>
     <p>pusssssssssssssssssssssssssssssssssssh</p>
+    <p>rokib vai rocks</p>
     >>>>>>> 84d99d6db1d447f9e523147cff3158f76b84d7ef
 </body>
 
